--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,14 @@ html,
 body {
   padding: 0;
   margin: 0;
+  
+  min-height: 100%;
+
+  background-image: url('../public/logos/background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
