--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,17 +6,25 @@
   font-family: "Jost", sans-serif;
 }
 
-.img_title {
-  width: 50%;
-  height: 50%;
-  object-fit: cover;
+.lomba_card {
+  background: rgb(12,29,88);
+  background: linear-gradient(45deg, rgba(12,29,88,1) 0%, rgba(110,76,104,1) 100%); 
 }
 
-.navbar {
-  /* make navbar fixed at the top */
-  position: fixed;
+.lomba2_card {
+  background: rgb(160,61,163);
+  background: linear-gradient(135deg, rgba(160,61,163,1) 0%, rgba(56,148,58,1) 100%);
+}
+
+.exhibition_card {
+  background: rgb(148,100,102);
+  background: linear-gradient(45deg, rgba(148,100,102,1) 26%, rgba(243,213,108,1) 100%);
+}
+
+.div-right {
+  /* position a div to the right */
+  position: absolute;
+  right: 0;
   top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 9999;
+  bottom: 0;
 }
