--- a/styles/Collection.module.css
+++ b/styles/Collection.module.css
@@ -1,8 +1,8 @@
 .column {
-    display: flex;
-    flex-direction: column;
-    flex: 25%;
-    max-width: 25%;
+    height: auto;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    break-inside: avoid-column;
 }
 
 
