--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,46 @@ body {
   flex-direction: column;
 }
 
+#index > div:hover > div {
+  border-right-width: 8px;
+}
+
+#koleksi img {
+  border-radius: .3rem;
+}
+
+#koleksi img:hover {
+  cursor: grab;
+}
+
+.did_slide_in {
+  opacity: 0;
+  transform: translateY(20%);
+  transition: opacity 1.2s cubic-bezier(.4, 0, .2, 1), transform 1.2s cubic-bezier(.4, 0, .2, 1);
+  transition-delay: .1s;
+}
+
+.did_slide_in.appear {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.header_slide_in.appear {
+  animation: cubic-bezier(.4, 0, .2, 1) 1s header-slide;
+}
+
+@keyframes header-slide {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, 20%, 0);
+  }
+  100% {
+    opacity: 1;
+    transform: translateZ(0);
+  }
+}
+
+
 a {
   color: inherit;
   text-decoration: none;
