--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,9 @@ body {
 
 body {
   min-height: 100vh;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-smoothing: antialiased;
 }
 
 #__next {
@@ -66,7 +69,7 @@ body {
 }
 
 .header_slide_in2.appear {
-  animation: cubic-bezier(.4, 0, .2, 1) 1s header-slide2;
+  animation: cubic-bezier(.4, 0, .2, 1) .6s header-slide2;
 }
 
 @keyframes header-slide2 {
